# odapi

./: .gitignore  README.md  create_intm_dunder_models.sh  dba_index_usage.txt  docker-compose.yml  environment.yml  pyproject.toml  pytest.ini  queries.sql  requirements.txt
api/: Dockerfile  database.py  main.py  odapi.py
api/tests/: conftest.py  test_dim_geo.py  test_general.py  test_indicator.py  test_indicators.py  test_portrait.py
dag/: README.md  dagster.yaml  pyproject.toml  setup.cfg  setup.py
dag/odapi/: __init__.py  definitions.py
docker/dagster/: Dockerfile  dagster.yaml
docker/postgis/: Dockerfile  Dockerfile.manualpostgis  Dockerfile.pg_parquet
models/: Dockerfile  dbt_project.yml  docker-compose.yml  environment.yml  packages.yml  profiles-template.yml
models/macros/: get_model.sql  intm_bfs_stat_tab.sql  intm_bfs_statatlas.sql  intm_get_upstream_config.sql  intm_ktzh_gp.sql  intm_measures.sql  intm_sss_map_indicators.sql  intm_typecast.sql  mart_partition.sql  remap_ja_nein_boolean.sql  stgn_bfs_stat_tab.sql  stgn_ktzh_gp.sql  stgn_sss_replace.sql
models/models/: schema.yml
models/seeds/: seed_export_jp_2025-01-23.csv  seed_geocode.csv  seed_indicator.csv  seed_measure.csv  seed_unit.csv  seeds.yml
models/snapshots/: snap_bfe_minergie.sql  snap_bfs_statatlas.sql  snap_bfs_statatlas_v2.sql  snap_ktzh_gp_auslaenderanteil.sql  snap_ktzh_gp_bevoelkerung.sql  snap_sss_bevoelkerung_altersklassen.sql  snap_sss_bevoelkerung_aufenthalt.sql  snap_sss_bevoelkerung_bilanz.sql  snap_sss_bevoelkerung_geschlecht_zivilstand.sql  snap_stab_bev_heirat.sql  (+21 more)
(+94 files in other folders)
