[project]
name = "odapi"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.12.14",
    "asyncpg>=0.30.0",
    "black>=25.1.0",
    "dagster==1.10.5",
    "dagster-aws==0.26.5",
    "dagster-dbt==0.26.5",
    "dagster-postgres==0.26.5",
    "dagster-webserver==1.10.5",
    "dbt-core==1.8.2",
    "dbt-postgres==1.8.2",
    "docker>=7.1.0",
    "fastapi-pagination>=0.13.3",
    "fastapi[standard]>=0.116.1",
    "geoalchemy2>=0.18.0",
    "geopandas>=1.0",
    "geopy>=2.4.1",
    "great-expectations>=1.5",
    "gtfs-realtime-bindings>=1.0.0",
    "ipdb>=0.13.13",
    "ipython>=9.4.0",
    "isort>=6.0.1",
    "jinja2>=3.1.6",
    "jq>=1.10.0",
    "jupyterlab>=4.4.5",
    "neovim>=0.3.1",
    "networkx>=3.5",
    "numpy==1.26",
    "openpyxl>=3.1.5",
    "osmnx>=2.0.5",
    "owslib>=0.34.1",
    "pandas>=2.1.1",
    "plotly>=6.2.0",
    "protobuf3-to-dict>=0.1.5",
    "pyarrow>=21.0.0",
    "pyaxis>=0.4.1",
    "pydantic>=2.11.7",
    "pymongo>=4.13.2",
    "pyproj>=3.7.1",
    "pytest>=8.4.1",
    "python-dotenv>=1.1.1",
    "redis>=6.2.0",
    "requests>=2.32.4",
    "sqlalchemy>=2.0.41",
    "sqlmodel>=0.0.24",
    "uvicorn>=0.35.0",
    "xlsxwriter>=3.2.5",
]
